updated certiications, dropped skillset

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
     <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
+    <!-- <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -183,7 +183,8 @@
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section> -->
+    <!-- End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -209,30 +210,52 @@
               <div class="resume-item">
                 <h4>Tax and Customs Law Degree</h4>
                 <h5>1999</h5>
-                <p><em>Universidad St. Jhon’s (Mexico)</em></p>
+                <p><em>St. Jhon’s University (Mexico)</em></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
               </div>
 
               <div class="resume-item">
-                <h4>de México</h4>
+                <h4>Intellectual Property Post Degree Course</h4>
                 <h5>2000</h5>
-                <p><em>Universidad St. Jhon’s (Mexico)</em></p>
+                <p><em>Universidad Panamericana</em></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
+              </div>
+
+              <div class="resume-item">
+                <h4>IT Law Degree</h4>
+                <h5>2004</h5>
+                <p><em>Instituto Tecnloógico Autónomo de México</em></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
+              </div>
+
+              <div class="resume-item">
+                <h4>Corporate Law Degree</h4>
+                <h5>2013</h5>
+                <p><em>Instituto Tecnloógico Autónomo de México</em></p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
               </div>
 
             <div class="resume-item">
               <h4>Earned Certifications</h4>
               <p>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet.</li> 
-                  <li>Lorem ipsum dolor sit amet.</li>
-                  <li>Lorem ipsum dolor sit amet.</li>
-                  <li>Lorem ipsum dolor sit amet.</li>
-                </ul>
+                <h4>Couterfeit Product Risk Assesment and Mitigation</h4>
+                <h5>2015</h5>
+                <p><em>Michigan State University</em></p>
+                <p>This comprehensive training program was designed to teach the skills and knowledge professionals need to be efficient, proactive, and strategic in brand protection. Designed from direct experience and feedback from the top protection professionals from around the world, the A-CAPP Center employs an evidence-based approach for its certificate that provides core concepts and competencies needed to become a brand protection professional who is better prepared to face the legal, business, strategic and security challenges of the brand protection industry.</p>            
+                <br>
+                <h4>The Investigation of Transnational and Organized Intellectual Property (IP) Crime.</h4>
+                <h5>2018</h5>
+                <p><em>International IP Crime Investigators College in Coordination with Interpol</em></p>
+                <p>This certification was developed by a transnational committee of renowned subject matter experts (SMEs). The curriculum topics were recognized as the key building blocks necessary to form a sound basis of knowledge that will prepare law enforcement and other partners to fight IP crime on an international level effectively.</p>
+                <br>
+                <h4>Investigating Online Counterfeiting and Piracy</h4>
+                <h5>2018</h5>
+                <p><em>International IP Crime Investigators College in Coordination with Interpol</em></p>
+                <p>This advanced level curriculum explores Investigating Online Counterfeiting and Piracy. Students examine investigating online counterfeiting and piracy in detail to provide them with the knowledge and skills required to successfully lead and manage online criminal investigations.</p>
               </p>
             </div>
             
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Awards & Publications</h4>
               <p>
                 <b>Award One<br>
@@ -261,7 +284,7 @@
               </p>
               
 
-            </div>
+            </div> -->
 
 
           </div>
