fixed location from template

--- a/index.html
+++ b/index.html
@@ -229,42 +229,7 @@
       </div>
     </section><!-- End Resume Section -->
 
-    <!-- ======= Testimonials Section ======= -->
-    <!-- <section id="testimonials" class="testimonials section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Testimonials</h2>
-        </div>
-
-        <div class="owl-carousel testimonials-carousel" data-aos="zoom-in" data-aos-delay="100">
-          <div class="testimonial-item">
-            <img src="/assets/img/testimonials/Jason_Wright.jpeg" class="testimonial-img" alt="picture of person giving testimony">
-            <h3>Jason Wright</h3>
-            <h4>Brand Protection Manager, at ACME Widgets</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Arturo is just amazing!  I once saw him wrestle a crazed bear to save a bus full of orphans.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-          <div class="testimonial-item">
-            <img src="assets/img/testimonials/Jim_Jones.jpeg" class="testimonial-img" alt="picture of person giving testimony">
-            <h3>Jim Jones</h3>
-            <h4>Director of Business Processes at XZY Holdings, Inc.</h4>
-            <p>
-              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Aturo got us through some really tough times at XZY.  One year during a team building excercise he was bit by a Cobra.  After five days of excruciating pain, the cobra died.  Arturo felt so bad that he started a non-profit to help protect that particular speicies of Cobra.
-              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-            </p>
-          </div>
-
-        </div>
-
-      </div>
-    </section> -->
-    <!-- End Testimonials Section -->
+  
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -281,7 +246,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Somewhere St, Mexic City, Mexico</p>
+                <p>Mexic City, Mexico</p>
               </div>
             </div>
           </div>
