added final edits to resume items sections

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
                 <h4>License to Practice Law / BD (“Licenciatura”)</h4>
                 <h5>1993 - 1999</h5>
                 <p><em>Universidad Nacional Autónoma de México</em></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, nesciunt sit dolor deserunt ducimus quisquam dolores commodi dolore neque. Hic ratione necessitatibus quibusdam esse asperiores!</p>
+                <p>Obtained license to practice Law after defending the thesis “Art, Criminal behavior and Crime”</p>
               </div>
             
               <div class="resume-item">
                 <h4>Tax and Customs Law Degree</h4>
                 <h5>1999</h5>
                 <p><em>St. Jhon’s University (Mexico)</em></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
+                <p>Post-graduate course on Tax and Customs Law</p>
               </div>
 
               <div class="resume-item">
@@ -137,14 +137,14 @@
                 <h4>IT Law Degree</h4>
                 <h5>2004</h5>
                 <p><em>Instituto Tecnloógico Autónomo de México</em></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
+                <p>Post-graduate course on IT law </p>
               </div>
 
               <div class="resume-item">
                 <h4>Corporate Law Degree</h4>
                 <h5>2013</h5>
                 <p><em>Instituto Tecnloógico Autónomo de México</em></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
+                <p>Post-degree course on corporate Law</p>
               </div>
 
             <div class="resume-item">
@@ -176,15 +176,15 @@
               <h5>2017 - 2021</h5>
               <p><em>UL MEXICO, S.C. DE C.V., MEXICO CITY, MEXICO</em></p>
               <ul>
-                <li>Negotiated and lessened fees for outside counsel and investigators in Mexico.</li>
-                <li>Managed the re-call of counterfeit UL branded adapters from convenience stores.</li> 
+                <li>Negotiated and lessened fees for outside counsel and investigators in Mexico</li>
+                <li>Managed the re-call of counterfeit UL branded adapters from convenience stores</li> 
                 <li>Managed to organize a joint operation between the Trademark Office and the Bureau of Foreign
                   Trade investigations leading to the seizure of more than 20,000 counterfeits and a penalty against
-                  the sellers for 3.6 million pesos ($180,000.00 USD).</li>
+                  the sellers for 3.6 million pesos ($180,000.00 USD)</li>
                 <li>Led the Brand Protection Program to seize more than a million
-                  counterfeits bearing UL trademarks and expanded operations to new territories.</li>
+                  counterfeits bearing UL trademarks and expanded operations to new territories</li>
                 <li>Oversaw the recovery of more than $70,000 USD on settlements for IP infringement
-                  throughout the LATAM region.</li>
+                  throughout the LATAM region</li>
                 <li>Provided counterfeiting mitigation instruction to reprentatives in Mexico, República Dominicana, the United States, Perú, Guatemala, Bolivia, Ecuador, Paraguay, Honduras, Uruguay and France (Interpol).</li>  
               </ul>
             </div>
@@ -193,14 +193,14 @@
               <h5>2007 - 2017</h5>
               <p><em>SCHNEIDER ELECTRIC S.A. DE C.V., MEXICO/CENTRAL AMERICA</em></p>
               <ul>
-                <li>Found and stopped a Service provided Fraud against the company for more than half a million dollars.</li>
-                <li>Implemented a strategy for defending national Market against parallel imports.</li>
-                <li>Dismantled more than 20 counterfeiting operations in Mexico and Latin America.</li>
+                <li>Found and stopped a Service provided Fraud against the company for more than half a million dollars</li>
+                <li>Implemented a strategy for defending national Market against parallel imports</li>
+                <li>Dismantled more than 20 counterfeiting operations in Mexico and Latin America</li>
                 <li>Implemented procedures for responding legal requirements for administrative authorities including
-                  Consumer Protection Agencies.</li>
-                <li>Negotiated the closure of several competitors due to counterfeiting (SICA, TRAKA, FULGORE).</li>
-                <li>Negotiated the extra-judicial collection of more than a million and a half dollars on unpaid debts.</li>
-                <li>Established the procedure for deducting uncollectable debts.</li>
+                  Consumer Protection Agencies</li>
+                <li>Negotiated the closure of several competitors due to counterfeiting (SICA, TRAKA, FULGORE)</li>
+                <li>Negotiated the extra-judicial collection of more than a million and a half dollars on unpaid debts</li>
+                <li>Established the procedure for deducting uncollectable debts</li>
                 <li>Represented the company on administrative matters concerning IP and Information Protection
                   issues.</li>
 
@@ -212,15 +212,47 @@
               <h5>2006 - 2007</h5>
               <p><em>ASTRAZENECA, S.A. DE C.V., MEXICO</em></p>
               <ul>
-                <li>Lobbied before Health authorities to secure compliance with pharmaceutical patents in public tenders.</li>
+                <li>Lobbied before Health authorities to secure compliance with pharmaceutical patents in public tenders</li>
 
-                <li>Represented the company on several administrative litigations on consumer protection, environmental and sanitary risks.</li>
+                <li>Represented the company on several administrative litigations on consumer protection, environmental and sanitary risks</li>
 
-                <li>Coordinated the Licensing of trademarks for Mexico to protect IP assets.</li>
+                <li>Coordinated the Licensing of trademarks for Mexico to protect IP assets</li>
 
-                <li>Negotiated advertisement agreements for the company.</li>
+                <li>Negotiated advertisement agreements for the company</li>
               </ul>
             </div>
+
+            <div class="resume-item">
+              <h4>Executive Counsel</h4>
+              <h5>2005 - 2006</h5>
+              <p><em>OLIVARES & CIA, S.C.</em></p>
+              <ul>
+                <li>IP Litigation, Administrative litigation, contract negotiation</li>
+                <li>Obtained orders to stop the acquisition of medicaments in violation of our client’s patents (Astra Zeneca)</li>
+                <li>Successful litigation in favor of our client’s interests in public tenders (Birmex)</li>
+                <li>Defended trademark registrations for media companies (Monitor)</li>
+              </ul>
+            </div>
+            <!-- <div class="resume-item">
+              <h4>Associate Counsel</h4>
+              <h5>2001 - 2005</h5>
+              <p><em>BARRERA, SIQUEIROS Y TORRES LANDA, S.C (HOGAN LOVELLS)</em></p>
+              <ul>
+                <li>Trademark and patent processing, IP litigation and investigations, administrative litigation</li>
+                <li>Litigated on one of the first cyber-squatting cases in México <em>(www.federalmogul.com.mx)</em>.</li>
+                <li>Lobbied for the cancelation of advertisement campaigns in violation of “Viagra” trademark</li>
+                <li>Managed the seizure of more than 10 tons of counterfeited products (Hewlett Packard, Bubble
+                  Gummers & others)</li>
+                <li>Implemented legal strategies to introduce trademarks to Mexico (“ICECAP” trademark)</li>
+                <li>Participated in the earliest negotiations for legislation to implement “Data exclusivity” privileges on
+                  tests for Health Registrations</li>
+                <li>Obtained several trademark registrations for our clients (General Electric, Hewlett Packard, Federal
+                  Mogul, Armstrong Laboratories & Bata Brands)</li>
+                <li>Filed and secured several patents for several clients including Wisconsin University</li>
+                <li>Licensing of IP assets</li>
+              </ul>
+            </div> -->
+
 
           </div>
         </div>
