--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
                 <li>Licensing of IP assets</li>
               </ul>
             </div> -->
-
-
           </div>
+
+
         </div>
         <hr>
         <a href="https://drive.google.com/file/d/1paDIsQ4MVtibVrfU539fnsBKf9wB4NXG/view?usp=sharing">Download Resume</a>
@@ -278,7 +278,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Mexic City, Mexico</p>
+                <p>Mexico City, Mexico</p>
               </div>
             </div>
           </div>
