fixed some lorem ipsum

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h4>Intellectual Property Post Degree Course</h4>
                 <h5>2000</h5>
                 <p><em>Universidad Panamericana</em></p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, quos optio vel vero molestiae minima, eveniet ad quam voluptatibus accusamus, enim nostrum cumque. Consequatur, mollitia.</p>
+                <p>Post-graduate course on Intellectual Property</p>
               </div>
 
               <div class="resume-item">
