--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Arturo Bustamante Loranca</h1>
-      <p>I'm A <span class="typed" data-typed-items="Licensed Attorney, Brand Protection Professional, Diverse Thinker, Creative Writer & Artist"></span></p>
+      <p>I'm A <span class="typed" data-typed-items="Licensed Attorney, Brand Protection Professional, Diverse Thinker, Creative Writer And Artist"></span></p>
       <div class="social-links">
         <a href="https://www.linkedin.com/in/arturo-bustamante-loranca-b821b651/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <!-- <a href="#" class="github"><i class="bx bxl-github"></i></a> -->
