added portfolio section

--- a/index.html
+++ b/index.html
@@ -261,7 +261,44 @@
       </div>
     </section><!-- End Resume Section -->
 
-  
+   <!-- ======= Portfolio Section ======= -->
+ <section id="portfolio" class="portfolio section-bg">
+  <div class="container" data-aos="fade-up">
+
+    <div class="section-title">
+      <h2>Portfolio</h2>
+    </div>
+    
+    <div id="project1">
+      <h2>Awareness Against Counterfeiting</h2>
+      <h3>IPR Center Report: Volume 2: No. 3: September 2009</h3>
+      <p>
+        <a href="https://www.qries.com/"> 
+          <img alt="Article Thumbnail" src="https://drive.google.com/uc?export=view&id=1BA4x0OXlwoXGPTeYgBp0JGM1vAnFyv9T"
+          width="760" height="500">
+       </a>
+        <!-- <img src="https://drive.google.com/uc?export=view&id=1BA4x0OXlwoXGPTeYgBp0JGM1vAnFyv9T"><br> -->
+      </p>
+        <br>
+        <hr>
+      </p>
+    </div>
+
+    <div id="project1">
+      <h2>Our friend Roi</h2>
+      <h3>May, September 2021</h3>
+      <p>
+        <a href="https://drive.google.com/file/d/1C8QPNQLmEUgr2W-YQ9flHICj2LjWVpYe/view?usp=sharing"> 
+          <img alt="Article Thumbnail" src="https://drive.google.com/uc?export=view&id=1Sb9EzFrsZh9Smj2vXuYQ01rILBkCKiPE"
+          width="760" height="500">
+       </a>
+      </p>
+        <br>
+        <hr>
+      </p>
+    </div>
+  </div>
+</section><!-- End Portfolio Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
